--- a/afkortingen.tex
+++ b/afkortingen.tex
@@ -1,2 +1,34 @@
 \chapter*{List of abbreviations}
 \addcontentsline{toc}{chapter}{List of abbreviations}
+
+
+\textbf{A} - \textit{Adenine} - One of the 4 nitrogen bases present in DNA \\
+\textbf{ASIC} - \textit{Application Specific Integrated Circuit} - An integrated circuit especially designed for a specific application \\
+\textbf{BAM} - \textit{Binary Alignment Map} - The file format used for storing mapped reads, binary \\
+\textbf{bp} - \textit{base pairs} - 2 nitrogen bases that are connected with hydrogen bonds in DNA. Adenine is connected with Thymine, Guanine with Cytosine \\
+\textbf{C} - \textit{Cytosine} - One of the 4 nitrogen bases present in DNA \\
+\textbf{cfDNA} - \textit{cell-free DNA} - cell free DNA, which is found in the blood plasma \\
+\textbf{CIGAR} - \textit{Concise Idiosyncratic Gapped Alignment Report} - A string that indicates where matches, insertions and deletions occur in a mapped sequence \\
+\textbf{CLB} - \textit{Complex Logic Block} - The basic element in an FPGA \\
+\textbf{CPU} - \textit{Central Processing Unit} - The integrated circuit present in every computer which is easily reprogrammable. \\
+\textbf{DNA} - \textit{DesoxyriboNucleic Acid} - A molecule present in the nucleus of a cell  that stores the genetic information for all living organisms \\
+\textbf{FAT} - \textit{File Allocation Table} - A technology for organizing file systems \\
+\textbf{FPGA} - \textit{Field Programmable Gate Array} - An integrated circuit consisting of programmable logic components \\
+\textbf{G} - \textit{Guanine} - One of the 4 nitrogen bases present in DNA \\
+\textbf{GPU} - \textit{Graphical Processing Unit} - A semiconductor technology that is specialized in video encoding and decoding \\
+\textbf{HDL} - \textit{Hardware Description Language} - A set of commands that can be used to describe how the hardware in an FPGA should be programmed \\
+\textbf{hg} - \textit{human genome} - A reference for the full DNA sequence found in the nucleus of the cells from every human \\
+\textbf{HLS} - \textit{High Level Synthesis} - A compiler used to translate C code into HDL code \\
+\textbf{IDE} - \textit{Integrated development environment} - A software application that provides utilities to a programmer when programming an application \\
+\textbf{Indel} - \textit{Insertion or Deletion} - A single term to describe an insertion or deletion in DNA \\
+\textbf{MPSoC} - \textit{Multi-Processor System on Chip} - An integrated circuit that containts multiple microprocessors and/or programmable hardware \\
+\textbf{NGS} - \textit{Next Generation Sequencing} - The technique used most often to determine the sequence DNA \\
+\textbf{NIPT} - \textit{Non-Invasive Prenatal Testing} - a test for detecting genetic defects in a foetus \\
+\textbf{N-W } - \textit{Needleman-Wunch algorithm} - An algorithm used for global alignment, which is similar to Smith-Waterman \\
+\textbf{SAM} - \textit{Sequence Alignment Map} - The file format used for storing mapped reads, text-based \\
+\textbf{SIMD} - \textit{Single Instruction Multiple Data} - A technology in CPUs that can manipulate more than 1 attribute with a single instruction \\
+\textbf{S-W} - \textit{Smith-Waterman algorithm} - A variation of the N-W algorithm, adapted for local alignment. It is a dynamic programming technique \\
+\textbf{sWGS} - \textit{shallow Whole-Genome Sequencing} - an experiment to detect gains and losses in DNA material \\
+\textbf{T} - \textit{Thymine} - One of the 4 nitrogen bases present in DNA \\
+\textbf{USB} - \textit{Universial Serial Bus} - An industry standard for connections between a computer and peripherals \\
+
