--- a/H6_implementation.tex
+++ b/H6_implementation.tex
@@ -4,7 +4,7 @@
 %                                                                 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
 
-\chapter{Acccelerating the software implementation using HLS}
+\chapter{Accelerating the software implementation using HLS}
 
 \section{Analysing software performance}
 
