--- a/thesis.tex
+++ b/thesis.tex
@@ -95,7 +95,7 @@
 %lijst van tabellen toevoegen?
 \listoftablespagetrue
 %lijst van symbolen toevoegen?
-\listofsymbolspagetrue
+\listofsymbolspagefalse
 \listofsymbols{symbolen}				%.tex file met daarin de lijst van symbolen
 %lijst van afkortingen toevoegen?
 \listofabbrevspagetrue
