fixed template to requirements

--- a/H6_implementation.tex
+++ b/H6_implementation.tex
@@ -54,6 +54,8 @@ Where the second attribute in the CELL type is the direction.
 
 \section{Hardware acceleration}
 
+//TODO
+
 It turns out, HLS does not support an in/out matrix to memory yet.
 
 slices
@@ -63,3 +65,5 @@ direction of matrix (first column then row).
 Bitwidth of (packed) data on axi master must be power of 2. => change the int to int16\_t and direction to uint16\_t (really wastefull towards memory) but no other choice without major remodel.
 
 \section{Comparison with the software}
+
+//TODO
