--- a/H8_conclusions.tex
+++ b/H8_conclusions.tex
@@ -6,6 +6,14 @@
 
 \chapter{Conclusion and future research}
 
+\section{Conclusion}
+
+//TODO
+
+\section{Future work}
+
+//TODO
+
 Gap opening and extension
 
 BFAST algorithm
