--- a/thesis.tex
+++ b/thesis.tex
@@ -103,7 +103,7 @@
 
 %informatie over het eindwerk, de promotor, ...
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\opleiding{Electronical engineering}
+\opleiding{Electronica}
 \afdeling{}
 
 \campus{brugge} %denayer,denayereng,geel,geeleng,gent,ghenteng,groept,groupteng,brugge,brugeseng
@@ -111,8 +111,8 @@
 % onder embargo? laat leeg indien van niet; vul de datum in als dd-mm-yyyy indien van wel
 %\embargo{25-10-2015}
 
-\title{Using an MPSoC to implement DNA sequence alignment}
-\subtitle{An implementation and acceleration of the Smith-Waterman algorithm}
+\title{Using an MPSoC to \newline implement DNA sequence alignment}
+\subtitle{An implementation and acceleration of the Smith-Waterman \newline algorithm}
 % \author{naam student}
 \forenameA{Robin}
 \surnameA{Nollet}
@@ -123,9 +123,9 @@
 
 \academicyear{2019 - 2020}
 
-\promotorA[Co-supervisors]{Ing. Václav \v{S}imek}
+\promotorA[Co-promoteren]{Ing. Václav \v{S}imek}
 \promotorB[]{Ing. Jonas Lannoo}
-\promotorC[Supervisor]{Prof. dr. ir. Davy Pissoort}
+\promotorC[Promotor]{Prof. dr. ir. Davy Pissoort}
 
 \begin{document}
 % \selectlanguage{dutch}
