--- a/fiiw.sty
+++ b/fiiw.sty
@@ -257,9 +257,9 @@
 		}
 		\ParallelRText{\noindent \vspace{1em}
 			\large\begin{flushright}
-				Master Thesis to obtain the degree of\\
-				Master of Science in Engineering Technology:\\
-				\@opleiding\ \@afdeling
+				Masterproef ingediend tot het behalen van \\
+				de graad van master of Science in de\\
+				Industri\"ele wetenschappen: \@opleiding\ \@afdeling
 			\end{flushright}
 		}
 	\end{Parallel}
@@ -267,7 +267,7 @@
 	\setlength{\TPHorizModule}{1cm}
 	\setlength{\TPVertModule}{0.75cm}
 	\begin{flushright}
-		Academic Year \@academicyear
+		Academiejaar \@academicyear
 	\end{flushright}
 	\cleardoublepage
     \thispagestyle{empty}
@@ -276,6 +276,7 @@
 	\copyright Copyright KU Leuven \\\\
 	%\printCopyRightInfo.\\\\	
 	Without written permission of the supervisor(s) and the author(s) it is forbidden to reproduce or adapt in any form or by any means any part of this publication. Requests for obtaining the right to reproduce or utilise parts of this publication should be addressed to KU Leuven Campus Brugge, Spoorwegstraat 12, B-8000 Brugge, +32 50 66 48 00 or via e-mail iiw.brugge@kuleuven.be. \\\\
+	Zonder voorafgaande schriftelijke toestemming van zowel de promotor(en) als de auteur(s) is overnemen, kopi\"eren, gebruiken of realiseren van deze uitgave of gedeelten ervan verboden. Voor aanvragen i.v.m.~het overnemen en/of gebruik en/of realisatie van gedeelten uit deze publicatie, kan u zich richten tot KU Leuven Campus Brugge, Spoorwegstraat 12, B-8000 Brugge, +32 50 66 48 00 of via e-mail iiw.brugge@kuleuven.be.
 	\cleardoublepage
 }
 
