--- a/H2_MBbackground.tex
+++ b/H2_MBbackground.tex
@@ -5,6 +5,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
 
 \chapter{Background information on DNA and DNA sequencing}
+\label{ch:MBbackground}
 
 \section{Biology and DNA}
 
