--- a/H5_RMaccelerated.tex
+++ b/H5_RMaccelerated.tex
@@ -5,6 +5,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
 
 \chapter{Software implementation with pure Smith-Waterman}
+\label{ch:SoftwareImpl}
 
 This chapter will cover an approach to reference genome mapping using pure smith-waterman. This is a computationally very demanding task, but is more precise than heuristic methods such as FASTA, ...
 
@@ -87,7 +88,7 @@ As in most implementations in software, it was decided to split up the functiona
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=0.5\textwidth]{systemImplementation/organigram.png}
-	\caption{an organisation chart of the split up functionalities}
+	\caption{An organisation chart of the split up functionalities}
 	\label{fig:organigram}
 \end{figure}
 
