--- a/H6_implementation.tex
+++ b/H6_implementation.tex
@@ -5,6 +5,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
 
 \chapter{Accelerating the software implementation using HLS}
+\label{ch:HardwareImpl}
 
 \section{Analysing software performance}
 
