--- a/H8_conclusions.tex
+++ b/H8_conclusions.tex
@@ -5,6 +5,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
 
 \chapter{Conclusion and future research}
+\label{ch:Conclusions}
 
 \section{Conclusion}
 
