--- a/voorwoord.tex
+++ b/voorwoord.tex
@@ -1,18 +1,24 @@
-Het voorwoord vul je persoonlijk in met een appreciatie of dankbetuiging aan de mensen die je hebben bijgestaan tijdens het verwezenlijken van je masterproef en je hebben gesteund tijdens je studie.
+From the Brno University of Technology I would like to thank the following people:
+\begin{itemize}
+	\item \textbf{Ing. V\'aclav \v Simek} as my supervisor for providing feedback on the process of executing this thesis, as well as helping with the administrative side of the Erasmus exchange and recommending courses at BUT.
+	\item \textbf{Ing. Tom\'a\v s Mart\'inek, Ph.D.} for providing the learning materials towards HLS and to point out the idea behind the BFAST algorithm.
+	\item \textbf{Ing. Vojt\v ech Mr\'azek, Ph.D.} for providing the ZCU 104 evaluation kit hardware
+\end{itemize}
 
-Thanks to:
+From KU Leuven I would like to thank the following people:
+\begin{itemize}
+	\item \textbf{Ing. Jonas Lannoo
+		Ph.D. Student} as a supervisor for his support from Belgium during my Erasmus towards the thesis.
+	\item \textbf{Ing. Sammy Verslype} for the original idea to try and pick a subject where I try to accelerate an algorithm using an FPGA equipped platform.
+\end{itemize} 
 
-BUT
- Vaclav Simek: promoter en help bij erasmus exchange
- Thomas martinek: idea BFAST en ondersteuning HLS
- Vojtech Mrazek: hardware
+I would also want to thank \textbf{Friedel Nollet, Ph.D.} for the original idea of implementing the genome mapping problem, as well as fact-checking my thesis for the biology part and providing me with sample data.
 
-KUL
- Jonas Lannoo: ondersteuning vanuit Belgie tijdens erasmus naar thesis toe
- Sammy Verslype: originele idee accelerator met FPGA gebaseerd platform
- 
-AZ sj
- Friedel Nollet: idee versnellen reference mapping, factchecking biologie gedeelte en aangeven voorbeelddata
+This thesis was executed during my time on an Erasmus exchange with the Brno Univerity of Technology. I would also want to thank the BUT for accepting me as an incoming Erasmus student.
 
+Furthermore, I would like to thank \textbf{ir. Joan Peuteman, Ph.D.}, \textbf{ir. Hilde Bonte} and \textbf{Ing. Michaela Studena} for helping me in the administration needed for the Erasmus exchange.
 
-kort bedankinkje peuteman, bonte en studena voor administratie erasmus
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.25\textwidth]{vut.png}
+\end{figure}
